--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+$--icon-grey: 166, 166, 166;
 $--grey: 34, 34, 34;
 $--white: 255, 255, 255;
 $--black: 0, 0, 0;
@@ -5,7 +6,5 @@ $--link-blue: 0, 184, 255;
 
 .palette {
     color: RGB($--white);
-    width: 100%;
-    min-height: 100vh; 
     background: RGB($--black); 
 }
