--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -17,12 +17,16 @@
     display: flex;
     margin: 0px 10px 0px 10px;
     flex-direction: column;
-    width: 33%;
+    min-width: 540px;
+}
+
+.card-column-header {
+    font-size: 20px;
+    text-align: center;
 }
 
 .card {
     min-height: 80px;
-    min-width: 540px;
     /* top | right | bottom | left */
     //padding: 5px 20px 5px 20px;
     margin-bottom: 20px;
@@ -30,10 +34,45 @@
     background-color: RGB($--grey);
 }
 
+.divider {
+    border: 2px solid RGB($--grey);
+    border-left: 0;
+    margin-top: 50px;
+    border-radius: 3px;
+}
+
 .card-content {
-    padding: 5px 20px 5px 20px;
+    padding: 5px 5px 5px 10px;
+}
+
+.post-details {
+    font-size: 16px;
+    font-style: italic;
+}
+
+.card-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.button {
+    background-color: transparent;
+    height: 24px;
+    width: 24px;
+    border-style: none;
+    padding: 0;
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.button line,
+.button polyline,
+.button path {
+    stroke: RGB($--icon-grey);
 }
 
 .icon {
-    
+    width: 24px;
+    height: 24px;
 }
