Add font to palette

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,5 +6,6 @@ $--link-blue: 0, 184, 255;
 
 .palette {
     color: RGB($--white);
-    background: RGB($--black); 
+    background: RGB($--black);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
