--- a/src/app/vox-pop/vox-pop.component.scss
+++ b/src/app/vox-pop/vox-pop.component.scss
@@ -1,5 +1,21 @@
+@import '../../styles.scss';
+
+.vox-pop-card {
+    max-width: 540px; 
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    border-radius: 3px; 
+    background-color: RGB($--grey);
+    padding: 5px 5px 5px 5px;
+}
+
 .submission-box {
     resize: none; 
     height: 75px; 
-    width: 400px
+    width: 400px;
+    color: white;
+    background-color: transparent;
+    border: none;
+    margin-bottom: 5px;
 }
