--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,26 +1,43 @@
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat.core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$hfht-website-primary: mat.define-palette(mat.$indigo-palette);
-$hfht-website-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$dark-primary-text: rgba(black, 0.87);
+$light-primary-text: white;
 
-// The warn palette is optional (defaults to red).
+$white-black-palette: (
+  50: #ffffff,
+  100: #e9e9e9,
+  200: #d9d9d9,
+  300: #c4c4c4,
+  400: #9d9d9d,
+  500: #7b7b7b,
+  600: #555555,
+  700: #434343,
+  800: #222222,
+  900: #000000,
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $dark-primary-text,
+    400: $dark-primary-text,
+    500: $dark-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $dark-primary-text,
+    A400: $dark-primary-text,
+    A700: $light-primary-text,
+  )
+);
+
+$hfht-website-primary: mat.define-palette($white-black-palette);
+$hfht-website-accent: mat.define-palette(mat.$amber-palette, 800, 700, 900);
 $hfht-website-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$hfht-website-theme: mat.define-light-theme((
+$hfht-website-theme: mat.define-dark-theme((
   color: (
     primary: $hfht-website-primary,
     accent: $hfht-website-accent,
@@ -28,9 +45,7 @@ $hfht-website-theme: mat.define-light-theme((
   )
 ));
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
+@include mat.core-theme($hfht-website-theme);
 @include mat.all-component-themes($hfht-website-theme);
 
 $--icon-grey: 166, 166, 166;
@@ -38,11 +53,6 @@ $--grey: 34, 34, 34;
 $--white: 255, 255, 255;
 $--black: 0, 0, 0;
 $--link-blue: 0, 184, 255;
-
-.palette {
-    color: RGB($--white);
-    background: RGB($--black);
-}
 
 html, body { 
   height: 100%; 
