--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -3,18 +3,17 @@
 .main {
     display: flex;
     flex-direction: column;
-    align-items: center;    
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    align-items: center;
 }
 
 .body {
     display: flex;
     justify-content: center;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .card-column-header {
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
 }
 
@@ -34,6 +33,7 @@
 }
 
 .card-body {
+    width: 540px;
     padding: 5px 5px 0px 10px;
 }
 
