Misc style changes, add icons to popup
Remove popup style, change color names, make button style global
Also remove angular material background color, white-black palette, etc
Move button and svg styles to styles.scss to affect style globally
Add x-mark svg file

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,7 @@
 
 .link {
     text-decoration: none;
-    color: RGB($--link-blue);
+    color: RGB($link-blue);
     &:hover {
         text-decoration: underline;
     }
