--- a/src/app/vox-pop/vox-pop.component.scss
+++ b/src/app/vox-pop/vox-pop.component.scss
@@ -6,7 +6,7 @@
     flex-direction: column; 
     align-items: center; 
     border-radius: 3px; 
-    background-color: RGB($--grey);
+    background-color: RGB($grey);
     padding: 5px 5px 5px 5px;
 }
 
