--- a/src/app/dashboard-edit-popup/dashboard-edit-popup.component.html
+++ b/src/app/dashboard-edit-popup/dashboard-edit-popup.component.html
@@ -1,10 +1,22 @@
-<div class="popup">
-    <h1 mat-dialog-title>Edit Submission</h1>
+<div style="background-color: inherit">
+    <div style="display: flex; justify-content: space-between;">
+        <h1 mat-dialog-title>Edit Submission</h1>
+        <button (click)="close()">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24">
+                <line x1="19" y1="5" x2="5" y2="19" fill="#fff" stroke="#000" stroke-miterlimit="10"/>
+                <line x1="5" y1="5" x2="19" y2="19" fill="#fff" stroke="#000" stroke-miterlimit="10"/>
+            </svg>
+        </button>
+    </div>
     <div mat-dialog-content>
         <div>Original text: {{data.pop.submission}}</div>
     <textarea [textContent]="data.pop.submission"></textarea>
     </div>
-        <div mat-dialog-actions>
-        <button (click)="close()"></button>
+    <div mat-dialog-actions>
+        <button (click)="confirm()">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24" width="24">
+                <polyline points="4 11.5 10 17.5 21 6.5" fill="none" stroke="#000" stroke-miterlimit="10"/>
+            </svg>
+        </button>
     </div>
 </div>
