--- a/src/app/vox-pop/vox-pop.component.scss
+++ b/src/app/vox-pop/vox-pop.component.scss
@@ -1,5 +1,7 @@
 @import '../../styles.scss';
 
+$submission-box-height: 75px;
+
 .vox-pop-card {
     max-width: 540px; 
     display: flex; 
@@ -7,15 +9,39 @@
     align-items: center; 
     border-radius: 3px; 
     background-color: RGB($grey);
-    padding: 5px 5px 5px 5px;
+    padding: 10px
 }
 
 .submission-box {
-    resize: none; 
+    font-size: 14px;
     height: 75px; 
     width: 400px;
-    color: white;
-    background-color: transparent;
-    border: none;
     margin-bottom: 5px;
+    padding: 0;
+}
+
+.submission-divider {
+    height: $submission-box-height / 2;
+    width: 400px;
+}
+
+::placeholder {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    text-align: center;
+    color: white;
+    opacity: .7;
+}
+
+.submission-button {
+    background-color: #ff6f00;
+    color: #000000;
+    border-radius: 3px;
+    height: 36px;
+    width: 64px;
+    font-weight: bold;
+    font-size: 14px;
+    &:active {
+        opacity: .7;
+    }
 }
